--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,14 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
+    "lib": ["es2015", "dom"],
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
-  }
+    "suppressImplicitAnyIndexErrors": true,
+    "removeComments": false
+  },
+  "exclude": [
+    "node_modules",
+    "typings",
+    "**/*.spec.ts"
+  ]
 }
